# PedalForge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  build_error.txt  build_errors.txt  build_log.txt  build_log_tmp.txt  build_output.txt  nam_file_browser_update.md  nam_file_browser_update2.md  rewrite_vm.py  scratch.cpp  scratchpad_board.py  scratchpad_replace.py  test_dijkstra.cpp  test_link.cpp  test_nam.md
.github/workflows/: ci.yml  voxfall-ci.yml
cmake/: FaustCompile.cmake  check_utf8_literals.py  utf8_baseline.txt
docs/: control-catalog.md
docs/design/: DESIGN.md
docs/handoff/: ai-auth-fix.md  display-subsystem.md  style-engine-handoff.md  style-picker-handoff.md
docs/urban-assault-remake/: DESIGN.md
docs/wiki/: _template-feature.md  index.md
faust/architecture/: pedalforge.arch
faust/factory/: compressor.dsp  delay.dsp  eq.dsp  overdrive.dsp  reverb.dsp
scratch/: check_17346.py  check_18179.py  check_truncation.py  debug_chunks.py  dump_steps.py  extract_all_steps.py  extract_all_views.py  extract_code.py  extract_onOpenLibrary.py  extract_step_14563.py  extract_view_file.py  find_any_mixer_code.py  find_duplicates.py  inspect_steps.py  inspect_view_files.py  nam_node_test.cpp  print_line.py  print_replacement.py  search_full_logs.py  search_onOpenLibrary.py  search_overview.py  step_14883.json  step_14889.json  step_17326.json  step_17330.json  step_17334.json  step_17346.json  step_17527.json  step_17542.json  step_17789.json  step_17799.json  step_17803.json  tab_popup_integration.patch  view_file_17798.txt
scratch/extracted/: step_14883_tc_0_content.cpp  step_14883_tc_0_replace_file_content.json  step_14883_tc_0_target.cpp  step_14889_tc_0_content.cpp  step_14889_tc_0_replace_file_content.json  step_14889_tc_0_target.cpp  step_17326_tc_0_content.cpp  step_17326_tc_0_replace_file_content.json  step_17326_tc_0_target.cpp  step_17330_tc_0_content.cpp  step_17330_tc_0_replace_file_content.json  step_17330_tc_0_target.cpp  step_17334_tc_0_content.cpp  step_17334_tc_0_replace_file_content.json  step_17334_tc_0_target.cpp  step_17346_tc_0_content.cpp  step_17346_tc_0_replace_file_content.json  step_17346_tc_0_target.cpp  step_17527_tc_0_multi_replace_file_content.json  step_17542_tc_0_multi_replace_file_content.json  step_17789_tc_0_content.cpp  step_17789_tc_0_replace_file_content.json  step_17789_tc_0_target.cpp  step_17799_tc_0_content.cpp  step_17799_tc_0_replace_file_content.json  step_17799_tc_0_target.cpp  step_17803_tc_0_content.cpp  step_17803_tc_0_replace_file_content.json  step_17803_tc_0_target.cpp
scratch/views/: line_11664_step_17516_MODEL_VIEW_FILE.txt  line_11670_step_17522_MODEL_VIEW_FILE.txt  line_11985_step_17694_MODEL_VIEW_FILE.txt  line_12228_step_17939_MODEL_RUN_COMMAND.txt  line_12342_step_18054_MODEL_RUN_COMMAND.txt  line_12430_step_18142_MODEL_VIEW_FILE.txt  line_12467_step_18179_tc_0_write_to_file.json
scripts/: ai-auth-doctor.sh  turing_bridge.py
source/: CustomStandaloneApp.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/ai/: AiAgent.cpp  AiAgent.h  AiProvider.h  AiTools.cpp  AiTools.h  AiTypes.h  AudioProbe.h  ClaudeCodeProvider.cpp  ClaudeCodeProvider.h  ClaudeProvider.cpp  ClaudeProvider.h  SecureStore.cpp  SecureStore.h  ToolHost.h
source/dsp/: CompanionPedalProcessor.h  ControlNodeLibrary.h  ControlSurfaceSync.h  DSPGraph.h  DSPNode.h  DSPNodeLibrary.h  ExpressionVM.h  FaustDSPNode.h  GraphPedalProcessor.h  GridSequencerNode.h  LogicNodeLibrary.h  MathNodeLibrary.h  MemoryNodeLibrary.h  MidiEditorNode.h  MidiNodeLibrary.h  NAMNode.h  NodeCatalog.h  PedalDesign.h  (+4 more)
tests/: test_ai.cpp  test_locomotion.cpp  test_net.cpp  test_preview.cpp  test_sim.cpp  test_udp.cpp  test_world.cpp
tools/: dump_wiki_reference.cpp
voxfall/: ASSETS.md  CMakeLists.txt  README.md  ROADMAP.md
(+240 files in other folders)
